--- a/src/app/notes/notes.component.css
+++ b/src/app/notes/notes.component.css
@@ -23,3 +23,10 @@
 .icon:hover {
   cursor: pointer;
 }
+
+.colorPicker{
+  width: 24px;
+  border: 0px;
+  height: 20px;
+   border-radius: 7px;
+}
