--- a/src/app/notes/notes.component.css
+++ b/src/app/notes/notes.component.css
@@ -11,7 +11,7 @@
 
 .note-area{
   width: 300px;
-  height:100px;
+  height:200px;
   max-width: 300px;
   border: 0px solid;
 }
@@ -24,9 +24,11 @@
   cursor: pointer;
 }
 
-.colorPicker{
+.color-picker{
   width: 24px;
   border: 0px;
   height: 20px;
-   border-radius: 7px;
+  border-radius: 7px;
+  position: relative;
+  cursor: pointer;
 }
