--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -4,16 +4,14 @@
       add
     </mat-icon>
     <span class="example-spacer"></span>
-    <input [(colorPicker)]="color" [style.background]="color" class="colorPicker" />
+    <input [(colorPicker)]="color" [style.background]="color" class="color-picker" [cpPosition]="'left'" />
     <mat-icon (click)="onRemoveNote(i)" class="icon" matTooltip="Remove note">
       close
     </mat-icon>
   </mat-card-header>
   <mat-card-content>
-    <!-- <p>
-      <textarea matInput placeholder="Take a note.." class="note-area"></textarea>
-    </p> -->
-    <editor apiKey="dd7blvqhxa48g7ppr618nhmwuqdusw01y0hpc2vpcoqadakj" [init]="{
+    <textarea matInput placeholder="Take a note.." class="note-area" [style.background]="color"></textarea>
+    <!-- <editor apiKey="dd7blvqhxa48g7ppr618nhmwuqdusw01y0hpc2vpcoqadakj" [init]="{
       height: 300,
       menubar: false,
       placeholder:'Take a note..',
@@ -26,6 +24,6 @@
         'undo redo | formatselect | bold italic backcolor | \
         alignleft aligncenter alignright alignjustify | \
         bullist numlist outdent indent | removeformat | help'
-    }"></editor>
+    }"></editor> -->
   </mat-card-content>
 </mat-card>
